<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:columnCount="1"
            android:padding="8dp" >

            <TextView
                android:id="@+id/autoBackupText"
                android:layout_width="144dp"
                android:layout_height="38dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/bAuto"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#434343"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/oneClickBackup"
                style="@style/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_marginBottom="4dp"
                android:layout_row="5"
                android:onClick="backupFragment"
                android:text="@string/bOneClick" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" >

                <Button
                    android:id="@+id/backupData"
                    style="@style/button3"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="2dp"
                    android:onClick="backupFragment"
                    android:text="@string/tabBackup" />

                <Button
                    android:id="@+id/restoreData"
                    style="@style/button3"
                    android:layout_width="150dp"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginLeft="2dp"
                    android:onClick="backupFragment"
                    android:text="@string/bRestore" />

            </GridLayout>

            <Button
                android:id="@+id/displayBackupData"
                style="@style/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:onClick="backupFragment"
                android:text="@string/bDisplay" />

            <ToggleButton
                android:id="@+id/autoBackupToggle"
                android:layout_column="0"
                android:layout_gravity="right|top"
                android:layout_row="0"
                android:hint="Auto Track Switch"
                android:text="@string/bAuto"
                android:textColor="#434343"
                android:textOff="OFF"
                android:textOn="ON" />

            <Button
                android:id="@+id/getDataInfo"
                style="@style/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_marginBottom="4dp"
                android:layout_row="1"
                android:onClick="backupFragment"
                android:text="@string/bInfo" />

        </GridLayout>

    </ScrollView>

</LinearLayout>