<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

	<FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="72dp"
	    android:layout_gravity="top"
	    android:background="#cc0033"
	    android:measureAllChildren="false" >

        <TextView
            android:id="@+id/headerTextBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="roboto"
            android:text="@string/tabBackup"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#f4f4f4"
            android:textSize="42sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:columnCount="1"
            android:padding="8dp" >

            <TextView
                android:id="@+id/autoBackupText"
                android:layout_width="144dp"
                android:layout_height="38dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/bAuto"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#434343"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/getDataInfo"
                style="@style/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:onClick="backupFragment"
                android:text="@string/bInfo"
                android:textColor="#434343" />

            <Button
                android:id="@+id/oneClickBackup"
                style="@style/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_marginBottom="4dp"
                android:layout_row="5"
                android:onClick="backupFragment"
                android:text="@string/bOneClick"
                android:textColor="#434343" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" >

                <Button
                    android:id="@+id/backupData"
                    style="@style/button3"
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="2dp"
                    android:onClick="backupFragment"
                    android:text="@string/tabBackup"
                    android:textColor="#434343" />

                <Button
                    android:id="@+id/restoreData"
                    style="@style/button3"
                    android:layout_width="152dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="2dp"
                    android:onClick="backupFragment"
                    android:text="@string/bRestore"
                    android:textColor="#434343" />

            </GridLayout>

            <Button
                android:id="@+id/displayBackupData"
                style="@style/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:onClick="backupFragment"
                android:text="@string/bDisplay"
                android:textColor="#434343" />

            <ToggleButton
                android:id="@+id/autoBackupToggle"
                android:layout_column="0"
                android:layout_gravity="right|top"
                android:layout_row="0"
                android:hint="Auto Track Switch"
                android:text="@string/bAuto"
                android:textColor="#434343"
                android:textOff="OFF"
                android:textOn="ON" />

        </GridLayout>

    </ScrollView>

</LinearLayout>